--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -63,7 +63,7 @@
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("PracticalInformations","PracticalInformation")">Faydalı Bilgiler</a>
+                            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
                         @*<li class="menu-item-simple-parent">
