--- a/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
@@ -21,14 +21,7 @@
                             <h6><a href="#">James Dunlop</a></h6>
                             <p>Associate / Crime</p>
                             <p>Lorem ipsum dolor sit amet, tincidunt suspendisse. Tempor lectus, purus elit et, non scelerisque et, posuere phasellus adipiscing ut luctus dignissimos. Sollicitudin sit augue non quam at, purus aenean enim nunc.</p>
-                            <!-- **dt-sc-social-icons - Starts** -->
-                            <ul class="dt-sc-social-icons">
-                                <li> <a href="#" title="twitter"> <span class="fa fa-twitter"></span>  </a> </li>
-                                <li> <a href="#" title="facebook"> <span class="fa fa-facebook"></span>  </a> </li>
-                                <li> <a href="#" title="behance"> <span class="fa fa-behance"></span>  </a> </li>
-                                <li> <a href="#" title="dribbble"> <span class="fa fa-dribbble"></span>  </a> </li>
-                                <li> <a href="#" title="linkedin"> <span class="fa fa-linkedin"></span>  </a> </li>
-                            </ul> <!-- **dt-sc-social-icons - Ends** -->
+                      
                         </div> <!-- **team-details - Ends** -->
                     </div><!-- **dt-sc-team - Ends** -->
                 </div>
@@ -46,13 +39,7 @@
                             <p>Associate</p>
                             <p>Lorem ipsum dolor sit amet, tincidunt suspendisse. Tempor lectus, purus elit et, non scelerisque et, posuere phasellus adipiscing ut luctus dignissimos. Sollicitudin sit augue non quam at, purus aenean enim nunc.</p>
                             <!-- **dt-sc-social-icons - Starts** -->
-                            <ul class="dt-sc-social-icons">
-                                <li> <a href="#" title="twitter"> <span class="fa fa-twitter"></span>  </a> </li>
-                                <li> <a href="#" title="facebook"> <span class="fa fa-facebook"></span>  </a> </li>
-                                <li> <a href="#" title="behance"> <span class="fa fa-behance"></span>  </a> </li>
-                                <li> <a href="#" title="dribbble"> <span class="fa fa-dribbble"></span>  </a> </li>
-                                <li> <a href="#" title="linkedin"> <span class="fa fa-linkedin"></span>  </a> </li>
-                            </ul> <!-- **dt-sc-social-icons - Ends** -->
+                          <!-- **dt-sc-social-icons - Ends** -->
                         </div> <!-- **team-details - Ends** -->
                     </div><!-- **dt-sc-team - Ends** -->
                 </div>
@@ -77,14 +64,7 @@
                             <h6><a href="#">Mick Lousie</a></h6>
                             <p>Women Harrasment</p>
                             <p>Lorem ipsum dolor sit amet, tincidunt suspendisse. Tempor lectus, purus elit et, non scelerisque et, posuere phasellus adipiscing ut luctus dignissimos. Sollicitudin sit augue non quam at, purus aenean enim nunc.</p>
-                            <!-- **dt-sc-social-icons - Starts** -->
-                            <ul class="dt-sc-social-icons">
-                                <li> <a href="#" title="twitter"> <span class="fa fa-twitter"></span>  </a> </li>
-                                <li> <a href="#" title="facebook"> <span class="fa fa-facebook"></span>  </a> </li>
-                                <li> <a href="#" title="behance"> <span class="fa fa-behance"></span>  </a> </li>
-                                <li> <a href="#" title="dribbble"> <span class="fa fa-dribbble"></span>  </a> </li>
-                                <li> <a href="#" title="linkedin"> <span class="fa fa-linkedin"></span>  </a> </li>
-                            </ul> <!-- **dt-sc-social-icons - Ends** -->
+
                         </div> <!-- **team-details - Ends** -->
                     </div><!-- **dt-sc-team - Ends** -->
                 </div>
@@ -102,13 +82,7 @@
                             <p>Associate / Estate Planning</p>
                             <p>Lorem ipsum dolor sit amet, tincidunt suspendisse. Tempor lectus, purus elit et, non scelerisque et, posuere phasellus adipiscing ut luctus dignissimos. Sollicitudin sit augue non quam at, purus aenean enim nunc.</p>
                             <!-- **dt-sc-social-icons - Starts** -->
-                            <ul class="dt-sc-social-icons">
-                                <li> <a href="#" title="twitter"> <span class="fa fa-twitter"></span>  </a> </li>
-                                <li> <a href="#" title="facebook"> <span class="fa fa-facebook"></span>  </a> </li>
-                                <li> <a href="#" title="behance"> <span class="fa fa-behance"></span>  </a> </li>
-                                <li> <a href="#" title="dribbble"> <span class="fa fa-dribbble"></span>  </a> </li>
-                                <li> <a href="#" title="linkedin"> <span class="fa fa-linkedin"></span>  </a> </li>
-                            </ul> <!-- **dt-sc-social-icons - Ends** -->
+                          
                         </div> <!-- **team-details - Ends** -->
                     </div><!-- **dt-sc-team - Ends** -->
                 </div>
@@ -134,13 +108,7 @@
                             <p>Business Law</p>
                             <p>Lorem ipsum dolor sit amet, tincidunt suspendisse. Tempor lectus, purus elit et, non scelerisque et, posuere phasellus adipiscing ut luctus dignissimos. Sollicitudin sit augue non quam at, purus aenean enim nunc.</p>
                             <!-- **dt-sc-social-icons - Starts** -->
-                            <ul class="dt-sc-social-icons">
-                                <li> <a href="#" title="twitter"> <span class="fa fa-twitter"></span>  </a> </li>
-                                <li> <a href="#" title="facebook"> <span class="fa fa-facebook"></span>  </a> </li>
-                                <li> <a href="#" title="behance"> <span class="fa fa-behance"></span>  </a> </li>
-                                <li> <a href="#" title="dribbble"> <span class="fa fa-dribbble"></span>  </a> </li>
-                                <li> <a href="#" title="linkedin"> <span class="fa fa-linkedin"></span>  </a> </li>
-                            </ul> <!-- **dt-sc-social-icons - Ends** -->
+                          
                         </div> <!-- **team-details - Ends** -->
                     </div><!-- **dt-sc-team - Ends** -->
                 </div>
