--- a/UskudarDenetim.UI/Views/Shared/_Header.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Header.cshtml
@@ -37,8 +37,8 @@
                         <li class="menu-item-simple-parent">
                             <a href="#">Hakkımızda</a>
                             <ul class="sub-menu">
-                                <li><a href="@Url.Action("About","Home")">Ekip Yapısı</a></li>
-                                <li><a href="@Url.Action("Index","TeamMember")">Biz Kimiz?</a></li>
+                                <li><a href="@Url.Action("About","Home")">Biz Kimiz?</a></li>
+                                <li><a href="@Url.Action("Index","TeamMember")">Ekip Yapısı</a></li>
 
                             </ul>
                             <a class="dt-menu-expand">+</a>
