--- a/UskudarDenetim.UI/Views/SharedLink/SharedLinks.cshtml
+++ b/UskudarDenetim.UI/Views/SharedLink/SharedLinks.cshtml
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-@Html.Partial("ServiceModal", new UskudarDenetim.UI.Models.ModelService())
+@Html.Partial("SharedLinkModal", new UskudarDenetim.UI.Models.ModelSharedLink())
 @section scripts{
 
     <script type="text/javascript">
