--- a/UskudarDenetim.UI/Content/shortcodes.css
+++ b/UskudarDenetim.UI/Content/shortcodes.css
@@ -892,8 +892,10 @@
 	.copyright .dt-sc-social-icons li a:hover:before { height:0%; }
 	#footer .mailchimp .dt-sc-social-icons li .facebook:hover:before, .copyright .dt-sc-social-icons li .facebook:before  { background-color:#3b5998; }
 	#footer .mailchimp .dt-sc-social-icons li .twitter:hover:before, .copyright .dt-sc-social-icons li .twitter:before  { background-color:#00aced; }
-	#footer .mailchimp .dt-sc-social-icons li .google-plus:hover:before, .copyright .dt-sc-social-icons li .google-plus:before  { background-color:#C63D2D; }
-	#footer .mailchimp .dt-sc-social-icons li .pinterest:hover:before, .copyright .dt-sc-social-icons li .pinterest:before  { background-color:#910101; }
+	#footer .mailchimp .dt-sc-social-icons li .foursquare:hover:before, .copyright .dt-sc-social-icons li .google-plus:before  { background-color:#C63D2D; }
+#footer .mailchimp .dt-sc-social-icons li .linkedin:hover:before, .copyright .dt-sc-social-icons li .pinterest:before {
+    background-color: #5e77ad;
+}
 	#footer .mailchimp .dt-sc-social-icons li .youtube:hover:before, .copyright .dt-sc-social-icons li .youtube:before  { background-color:#C4302B; }
 	.copyright .dt-sc-social-icons li .dribbble:before  { background-color:#ff99d3; }
 	.copyright .dt-sc-social-icons li .google:before  { background-color:#393939; border-color:#393939; }
