--- a/UskudarDenetim.UI/Views/Modal/SuccessMessageModal.cshtml
+++ b/UskudarDenetim.UI/Views/Modal/SuccessMessageModal.cshtml
@@ -1,17 +1,17 @@
 ﻿<!-- Modal -->
+
 <div class="modal fade mt-80" id="success-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" style="background-color:#4caf50;color:white !important">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="success-modal-title"></h4>
             </div>
             <div class="modal-body">
-            SA 
+                <h4 id="success-modal-body"></h4>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Kapat</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
