--- a/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
@@ -1,81 +1,4 @@
-﻿@model UskudarDenetim.UI.Models.ModelFooter   
- @*<footer id="footer">
-    <div class="footer-widgets-wrapper type5">
-        <div class="container">
-
-            <div class="column dt-sc-one-fifth first">
-                <aside class="widget widget_text">
-                    <h3 class="widget-title">What's Up</h3>
-                    <div class="textwidget">
-                        <ul>
-                            <li> <a href="#"> Timeline </a> </li>
-                            <li> <a href="#"> Messages </a> </li>
-                            <li> <a href="#"> Statistic </a> </li>
-                            <li> <a href="#"> Settings </a> </li>
-                            <li> <a href="#"> Logout </a> </li>
-                        </ul>
-                    </div>
-                </aside>
-            </div>
-
-            <div class="column dt-sc-one-fifth">
-                <aside class="widget widget_text">
-                    <h3 class="widget-title">Services</h3>
-                    <div class="textwidget">
-                        <ul>
-                            <li> <a href="#"> Branding </a> </li>
-                            <li> <a href="#"> UX Design </a> </li>
-                            <li> <a href="#"> Prototype </a> </li>
-                            <li> <a href="#"> UI Design </a> </li>
-                            <li> <a href="#"> Development </a> </li>
-                        </ul>
-                    </div>
-                </aside>
-            </div>
-
-            <div class="column dt-sc-one-fifth">
-                <aside class="widget widget_text">
-                    <h3 class="widget-title"> Attorneys </h3>
-                    <div class="textwidget">
-                        <ul>
-                            <li> <a href="#"> James Dunlop </a> </li>
-                            <li> <a href="#"> Thompson </a> </li>
-                            <li> <a href="#"> Danny </a> </li>
-                            <li> <a href="#"> Peter Jackson </a> </li>
-                            <li> <a href="#"> Karen Smith </a> </li>
-                        </ul>
-                    </div>
-                </aside>
-            </div>
-
-            <div class="column dt-sc-one-fifth">
-                <aside class="widget widget_text">
-                    <h3 class="widget-title">About Us</h3>
-                    <div class="textwidget">
-                        <ul>
-                            <li> <a href="#"> Company </a> </li>
-                            <li> <a href="#"> Our Team </a> </li>
-                            <li> <a href="#"> Testimonials </a> </li>
-                            <li> <a href="#"> Contacts </a> </li>
-                        </ul>
-                    </div>
-                </aside>
-            </div>
-
-            <div class="column dt-sc-one-fifth">
-                <aside class="widget widget_text">
-                    <h3 class="widget-title">Üsküdar Denetim © @DateTime.Now.Year</h3>
-                    <div class="textwidget">
-                        <ul>
-                            <li> <a href="#"> Terms and Conditions </a> </li>
-                            <li> <a href="#"> Privacy Policy </a> </li>
-                        </ul>
-                    </div>
-                </aside>
-            </div>
-        </div>
-    </div><!-- **footer-widgets-wrapper - End** -->
-</footer>*@
+﻿@model UskudarDenetim.UI.Models.ModelFooter
 <footer id="footer">
     <div class="footer-widgets-wrapper">
         <div class="container">
@@ -86,10 +9,9 @@
                     <p> <i class="fa fa-phone"></i> <span>Telefon:</span> @Model.PhoneNumber</p>
                     <p> <i class="fa fa-print"></i> <span>Fax:</span>@Model.FaxNumber</p>
                     <p> <i class="fa fa-envelope"></i> <span> Email:</span> <a href="mailto:@(Model.Email)" target="_top">@Model.Email</a> </p>
-                    
                     <p>
                         <i class="fa fa-location-arrow"></i> <span>
-                          @Html.Raw(Model.Address)
+                            @Html.Raw(Model.Address)
                         </span>
                     </p>
 
@@ -102,14 +24,13 @@
                     background-color: #191919 !important;
                     border-bottom: 0px !important
                 }
-               } 
             </style>
             <div class="column dt-sc-one-third">
                 <aside class="widget widget_popular_entries">
                     <h3 class="widget-title">Döviz <span class="wlast">Bilgileri</span><span class="small-line"> </span></h3>
                     <div class="column dt-sc-one-fourth">
                         <table>
-                            <tbody >
+                            <tbody>
                                 <tr>
                                     <td class="currency">&nbsp;</td>
                                     <td class="currency"><span>Alış</span></td>
@@ -137,24 +58,30 @@
             </div>
 
             @*<div class="column dt-sc-one-fourth">
-                <aside class="widget widget_tweetbox">
-                    <h3 class="widget-title">Twitter <span class="wlast">Feeds</span><span class="small-line"> </span></h3>
-                    <div class="tweet_list"> </div>
-                </aside>
-            </div>*@
+                    <aside class="widget widget_tweetbox">
+                        <h3 class="widget-title">Twitter <span class="wlast">Feeds</span><span class="small-line"> </span></h3>
+                        <div class="tweet_list"> </div>
+                    </aside>
+                </div>*@
 
             <div class="column dt-sc-one-third">
                 <aside class="widget mailchimp">
                     <h3 class="widget-title">Bülten <span class="wlast">Aboneliği</span><span class="small-line"> </span></h3>
                     <p>Üsküdar Denetim Hakkındaki En Son ve Güncel Haberler İçin Abone Olun!</p>
-                    <form method="post" class="mailchimp-form" name="frmNewsletter" action="php/subscribe.php">
+                    @using (Ajax.BeginForm("CreateSubscription", "Home", new AjaxOptions()
+                    {
+                        HttpMethod = "Post",
+                        OnSuccess = "OnSuccessSubscription",
+                        OnFailure = "OnFailureSubscription"
+                    }, new { @class = "mailchimp-form" }))
+                    {
                         <p>
                             <span class="fa fa-envelope"></span>
-                            <input type="email" placeholder="Enter Email" name="email" value="" required />
-                            <input type="submit" name="submit" class="dt-sc-button" value="Subscribe" />
+
+                            @Html.TextBoxFor(Model => Model.EmailSubs, new { placeholder = "Mail Adresinizi Giriniz", style = "width: 60% !important", required = "required" });
+                            <input style="padding-top:19px !important" type="submit" class="dt-sc-button" value="Abone Ol" />
                         </p>
-                    </form>
-                    <div id="ajax_newsletter_msg"></div>
+                    }
                     <div class="dt-sc-hr-invisible-small"></div>
                     <ul class="dt-sc-social-icons">
                         @foreach (var socialMedia in Model.SocialMedia)
@@ -170,8 +97,14 @@
 
     <div class="copyright">
         <div class="container align-center">
-            <p>Tüm Hakları Saklıdır.Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr">With Contributions A-SAM Software Solutions</a></p>
+            <p>Tüm Hakları Saklıdır.Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr" target="_blank">With Contributions A-SAM Software Solutions</a></p>
         </div>
     </div>
 
 </footer>
+@section scripts{
+
+    <script type="text/javascript">
+     
+    </script>
+}
