--- a/UskudarDenetim.UI/Views/Admin/Employees.cshtml
+++ b/UskudarDenetim.UI/Views/Admin/Employees.cshtml
@@ -14,7 +14,7 @@
                             <th scope="col">#</th>
                             <th scope="col">Ad/Soyad</th>
                             <th scope="col">Telefon Numarası</th>
-                            <th scope="col">Mail Adresi</th>
+                            <th scope="col"><input type="button" value="Yeni Kayıt" onclick="location.href='@Url.Action("CreateEmployee","Admin")'" /></th>
                         </tr>
                     </thead>
                     <tbody>
