--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -7,7 +7,9 @@
 @Html.Action("GetActivityAreas", "ActivityArea")
 @Html.Action("GetServices", "Service")
 @Html.Action("_PracticalInformations", "PracticalInformations")
-@Html.Partial("_Employees")
+
+
+@Html.Action("AllEmployee", "Admin")
 <div class="dt-sc-margin100"></div>
 @Html.Partial("_ReachUS", new UskudarDenetim.UI.Models.ModelContact())
 <div class="dt-sc-margin100"></div>
