--- a/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
@@ -97,14 +97,9 @@
 
     <div class="copyright">
         <div class="container align-center">
-            <p>Tüm Hakları Saklıdır.Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr" target="_blank">With Contributions A-SAM Software Solutions</a></p>
+            <p>Tüm Hakları Saklıdır.Üsküdar Denetim © @DateTime.Now.Year <a href="www.ahmetsariyer.com.tr" target="_blank"></a></p>
         </div>
     </div>
 
 </footer>
-@section scripts{
 
-    <script type="text/javascript">
-     
-    </script>
-}
