--- a/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
@@ -46,29 +46,32 @@
     <script>
         function OnSuccessSubscription(response) {
             if (response.success) {
-                debugger;
-                jQuery('#success-modal-title').html('Kaydetme İşlemi')
-                jQuery('#success-modal-body').html(response.message)
-                jQuery('#success-modal').modal();
+                openShowSuccessModal(response.message)
             }
             else {
-                jQuery('#error-modal-title').html('Kaydetme İşlemi')
-                jQuery('#error-modal-body').html(response.message)
-                jQuery('#error-modal').modal();
+                openShowErrorModal(response.message);
             }
         }
         function OnFailureSubscription(response) {
             if (response.success) {
-                jQuery('#error-modal-title').html('Kaydetme İşlemi')
-                jQuery('#error-modal-body').html(response.message)
-                jQuery('#error-modal').modal();
+                openShowErrorModal(response.message);
             }
             else {
-                jQuery('#error-modal-title').html('Kaydetme İşlemi')
-                jQuery('#error-modal-body').html(response.message)
-                jQuery('#error-modal').modal();
+                openShowErrorModal(response.message);
             }
-        }</script>>
+        }
+
+        function openShowSuccessModal(message) {
+            jQuery('#success-modal-title').html('BAŞARILI')
+            jQuery('#success-modal-body').html(message)
+            jQuery('#success-modal').modal();
+        }
+        function openShowErrorModal(message) {
+            jQuery('#error-modal-title').html('HATA')
+            jQuery('#error-modal-body').html(message)
+            jQuery('#error-modal').modal();}
+
+        </script>>
 </body>
 </html>
 
